--- a/.webpackrc
+++ b/.webpackrc
@@ -16,5 +16,12 @@
   "html": {
     "template": "./src/index.ejs"
   },
-  "hash": true
+  "hash": true,
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3000/",
+      "changeOrigin": true,
+      "pathRewrite": { "^/api":"" }
+    }
+  }
 }
