--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ant-design-pro",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "An out-of-box UI solution for enterprise applications",
   "private": true,
   "scripts": {
     "precommit": "npm run lint-staged",
-    "start": "roadhog dev",
-    "start:no-proxy": "cross-env NO_PROXY=true roadhog dev",
-    "build": "roadhog build",
+    "start": "cross-env DISABLE_ESLINT=true roadhog dev",
+    "start:no-proxy": "cross-env NO_PROXY=true DISABLE_ESLINT=true roadhog dev",
+    "build": "cross-env DISABLE_ESLINT=true roadhog build",
     "site": "roadhog-api-doc static && gh-pages -d dist",
     "analyze": "roadhog build --analyze",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
@@ -15,8 +15,8 @@
     "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js",
-    "test": "jest",
-    "test:comps": "jest ./src/components",
+    "test": "roadhog test",
+    "test:component": "roadhog test ./src/components",
     "test:all": "node ./tests/run-tests.js"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "bizcharts-plugin-slider": "^2.0.1",
     "classnames": "^2.2.5",
     "dva": "^2.1.0",
+    "dva-loading": "^1.0.4",
     "enquire-js": "^0.1.1",
     "fastclick": "^1.0.6",
     "lodash": "^4.17.4",
@@ -46,18 +47,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
-    "babel-jest": "^22.0.4",
     "babel-plugin-dva-hmr": "^0.4.1",
     "babel-plugin-import": "^1.6.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.1",
     "cross-port-killer": "^1.0.1",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -68,47 +63,19 @@
     "eslint-plugin-react": "^7.0.1",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
-    "jest": "^22.0.4",
-    "jsdom": "^11.5.1",
     "lint-staged": "^6.0.0",
     "mockjs": "^1.0.1-beta3",
     "pro-download": "^1.0.1",
-    "react-test-renderer": "^16.2.0",
     "redbox-react": "^1.5.0",
-    "roadhog": "^2.0.3",
-    "roadhog-api-doc": "^0.3.3",
+    "regenerator-runtime": "^0.11.1",
+    "roadhog": "^2.1.0",
+    "roadhog-api-doc": "^0.3.4",
     "rollbar": "^2.3.4",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0"
   },
   "optionalDependencies": {
     "nightmare": "^2.10.0"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ],
-    "plugins": [
-      "transform-decorators-legacy",
-      "transform-class-properties"
-    ]
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/tests/setupTests.js"
-    ],
-    "testMatch": [
-      "**/?(*.)(spec|test|e2e).js?(x)"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/tests/jasmine.js",
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|less)$": "<rootDir>/tests/styleMock.js"
-    }
   },
   "lint-staged": {
     "**/*.{js,jsx}": "lint-staged:js",
