# 数据接口标准采用Parse REST API标准 # 使用Parse-Server的数据接口

--- a/.webpackrc
+++ b/.webpackrc
@@ -9,6 +9,10 @@
       "extraBabelPlugins": [
         "dva-hmr"
       ]
+    },
+    "app": {
+      "appId":"bec",
+      "appName":"Becheer Web Front-end"
     }
   },
   "ignoreMomentLocale": true,
@@ -19,9 +23,9 @@
   "hash": true,
   "proxy": {
     "/api": {
-      "target": "http://localhost:3000/",
+      "target": "http://localhost:1337/",
       "changeOrigin": true,
-      "pathRewrite": { "^/api":"" }
+      "pathRewrite": { "^/api":"parse" }
     }
   }
 }
