--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-markdown": "^1.0.0-beta.7",
     "eslint-plugin-react": "^7.0.1",
+    "faker": "^4.1.0",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
