邮件内部Service用"mail"，出口接口再使用webpackrc再配置代理并重写路径。 禁止未验证帐号登录

--- a/.webpackrc
+++ b/.webpackrc
@@ -27,10 +27,10 @@
       "changeOrigin": true,
       "pathRewrite": { "^/api":"parse" }
     },
-    "/apps/bec": {
+    "/mail": {
       "target": "http://localhost:1337/",
       "changeOrigin": true,
-      "pathRewrite": { "^/apps/bec":"parse/apps/bec" }
+      "pathRewrite": { "^/mail":"parse/apps/bec" }
     }
   }
 }
