parse-server对接heroku https://parse-server-instances.herokuapp.com

--- a/.webpackrc
+++ b/.webpackrc
@@ -21,12 +21,12 @@
   "hash": true,
   "proxy": {
     "/api": {
-      "target": "http://localhost:1337/",
+      "target": "https://parse-server-instances.herokuapp.com/",
       "changeOrigin": true,
       "pathRewrite": { "^/api":"parse" }
     },
     "/mail": {
-      "target": "http://localhost:1337/",
+      "target": "https://parse-server-instances.herokuapp.com/",
       "changeOrigin": true,
       "pathRewrite": { "^/mail":"parse/apps/bec" }
     }
