新增一些功能 1.路由及菜单增加客户分析 2.增加依赖库crypto，增加cryptoUtils类库 3.增加<客户意向分析规则管理>功能单元 4.修改一些已知Bug

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bizcharts": "^3.1.2",
     "bizcharts-plugin-slider": "^2.0.1",
     "classnames": "^2.2.5",
+    "crypto": "^1.0.1",
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "enquire-js": "^0.1.2",
