--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dva": "^2.1.0",
     "dva-loading": "^1.0.4",
     "enquire-js": "^0.1.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "lodash-decorators": "^4.4.1",
     "moment": "^2.19.1",
@@ -45,6 +46,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
+    "react-infinite-scroller": "^1.1.4",
     "rollbar": "^2.3.4",
     "url-polyfill": "^1.0.10"
   },
